css/popup.css
html:not(imp):not(#imp) {
    background-color: rgb(32, 32, 32);
    --ml-background-background-color:Border;
}

body {
    margin: 0;
    min-width: 680px;
    min-height: 600px;
    overflow: hidden!important;
    background-color: var(--main-background-color);
    --ml-background-background-color:Background;
}

@supports (zoom: 1)
{
    body
    {
        zoom: var(--popup-scale, 1);
    }
}

@supports not (zoom: 1)
{
    body:not([style*="--popup-scale:1"])
    {
        transform: scale(var(--popup-scale, 1));
        transform-origin: 0 0;
    }
}

@supports (-webkit-appearance: button)
{
    .firefox-only
    {
        display: none;
    }
}
@supports (-moz-appearance: button)
{
    .chrome-only
    {
        display: none;
    }
}

.ml-dialog-root {
    font: normal 14px/1 Arial, Helvetica, sans-serif;
    color: var(--main-color);
    text-shadow: 0 0 1px var(--main-text-shadow-color);
    --ml-svgbackground-fill:Text;
    height: 99%;
    border: 1px solid var(--main-border-color);
}

.ml-dialog-logo {
    vertical-align: top;
    height: 32px;
    width: 32px;
    margin: -7px 0px 0px 0px;
    /* filter: drop-shadow(0px 0px 0px rgba(10,100,50,1)); */
    --ml-svgbackground-fill:Text;
}

.ml-dialog-header-text {
    display: inline-block;
    margin-top: 13px;
    vertical-align: top;
}

.ml-dialog-header {
    font: normal 18px Arial, Helvetica, sans-serif;
    text-align: center;
    border-bottom: solid 1px var(--thin-border-color);
    background: var(--alt-background-color);
    position: relative;
    vertical-align: baseline;
    height: 47px;
    z-index: 100;
    /* box-shadow: 0 0 3px var(--main-shadow-color); */
}

.ml-dialog-footer {
    font: normal 18px Arial, Helvetica, sans-serif;
    border-top: solid 1px var(--thin-border-color);
    border-bottom: solid 1px var(--main-border-color);
    background: var(--alt-background-color);
    height: 40px;
    display: table;
    width: 100%;
    text-align: center;
    z-index: 100;
}

.ml-dialog-header span {
    color: var(--logo-text-color);
    text-shadow: 0 0 1px hsla(94, 100%, 70%, 0.8);
}


/*.ml-dialog-header a {
     color: hsl(282, 100%, 50%);
    text-shadow: rgba(255, 255, 255, 0.8) 0px 0px 1px;
}*/

.ml-right-pane {
    display: table-cell;
    position: relative;
}

.ml-dialog-commands {
    border-left: solid 1px var(--thin-border-color);
    border-image: linear-gradient(90deg, var(--tab-item-border-color, var(--thin-border-color)) 0.5%, transparent 0.5%) 1;
    position: absolute;
    top: 145px;
    bottom: 0px;
    right: 0px;
    left: 0px;
    vertical-align: bottom;
    background-color: var(--main-background-color);
    /* width: 170px; */
}

.ml-dialog-settings {
    display: table;
    width: 100%;
    min-height: 500px;
}

.ml-dialog-settings-left {
    display: table-cell;
    padding: 10px;
    vertical-align: bottom;
}

.ml-dialog-settings-right {
    display: table-cell;
    padding: 10px;
    vertical-align: bottom;
}

.ml-dialog-commands>.ml-dialog-input-text {
    width: 121px;
    margin: 5px 20px 20px 20px;
    background-color: var(--content-background-color);
}

.ml-dialog-commands>.ml-dialog-label {
    margin: 0px auto;
    text-align: center;
    display: block;
}

.ml-dialog-commands>button,
.ml-dialog-commands>.ml-tool-box {
    margin: 20px 20px;
    width: 130px;
}

.ml-dialog-input {
    margin: 8px calc((100% - 267px)/2) 18px calc((100% - 267px)/2);
}

.ml-dialog-input[type='checkbox']+.ml-dialog-label {
    margin: 5px;
}

.ml-replace-all-hues-label {
    position: absolute;
    right: 24px;
    top: -4.5px;
    cursor: help;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-replace-all-hues-label:not(#imp) {
    background-color: transparent!important;
}

.ml-dialog-label {
    margin-left: calc((100% - 267px)/2);
    cursor: help;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-dialog-label:not(#imp) {
    background-color: transparent!important;
}

.ml-dialog-label:after {
    content: ": " var(--input-string) "%";
    font-weight: bold;
}

.ml-dialog-label.time:after {
    content: ": " var(--input-string) ":00";
    font-weight: bold;
}

.ml-dialog-label.size:after {
    content: ": " var(--input-string) "px";
    font-weight: bold;
}

.ml-input-container {
    position: relative;
    margin-bottom: 15px;
    margin-top: 10px;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-input-container:not(#imp) {
    background-color: transparent!important;
}

.ml-input-container:last-of-type {
    margin-bottom: 0px;
}

.ml-input-container.example
{
    margin-top: 25px;
}

.ml-dialog-label.time {
    margin-left: calc((100% - 257px)/2);
}

.ml-input-container:hover {
    --ml-text-color:HighlightedText;
    color: var(--main-color);
}

.ml-command-container {
    --w: 260px;
    /* position: absolute; */
    /* bottom: 26px; */
    text-align: center;
    width: var(--w);
    margin: 33px calc((100% - var(--w))/2) 0px calc((100% - var(--w))/2);
}

.ml-command-container .ml-helio-button {
    width: 120px;
    margin: auto 4px;
}

.disabled {
    filter: opacity(50%) grayscale(70%);
}

.disabled:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.ml-dialog-input-text {
    display: inline-block;
    box-sizing: content-box;
    padding: 3px 3px;
    border: 1px solid var(--main-border-color);
    border-radius: 2px;
    width: 259px;
    font: normal 12px/normal Arial, Helvetica, sans-serif;
    font-size: 14px;
    height: 17px;
    color: var(--main-color);
    text-overflow: clip;
    background: var(--main-background-color);
    box-shadow: 1px 1px 1px 0 var(--main-input-shadow-color) inset;
}
/* ... */

